# T

./: .gitignore  generate_cat_animations.py  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml
backend/: config.py  main.py
backend/utils/: cache.py
data/: voicebox.db
docs/: CONTRIB.md  RUNBOOK.md
src/: App.css  App.tsx  Settings.css  SettingsPage.tsx  StudioApp.tsx  main.tsx  studio.css  studioRouter.tsx  test-setup.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: config.rs  main.rs  server.rs
src-tauri/src/tts/: cloud_tts.rs  engine.rs  manager.rs  mod.rs  piper_tts.rs  player.rs  system_tts.rs  types.rs
src/__tests__/: LogsTab.test.tsx  black-cat-colors.test.ts  cat-animations.test.ts  cat-click-drag.test.tsx  cat-doubleclick-studio.test.tsx  cat-input.test.tsx  context-menu-position.test.ts  drag-region.test.tsx  serverLogStore.test.ts  settings-scroll.test.tsx  useServerLogs.test.ts
src/assets/: cat-happy.json  cat-idle.json  cat-listening.json  cat-sleeping.json  cat-speaking.json
src/components/: CatCharacter.tsx  InputBubble.tsx  SpeechBubble.tsx
src/components/studio/: Sidebar.tsx
src/hooks/: useAutoUpdater.ts  useAutoUpdater.tsx
src/lib/api/: client.ts
src/lib/hooks/: useAudioPlayer.ts  useAutoConnect.ts  useGenerationForm.ts  useModelDownloadToast.tsx  useRestoreActiveTasks.tsx  useServer.ts  useServerLogs.ts  useStoryPlayback.ts
src/lib/types/: serverLog.ts
src/platform/: tauriPlatform.ts
src/store/: useAppStore.ts
src/utils/: menuPosition.ts
(+32 files in other folders)
